--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "nuxt": "^3.11.1",
     "pinia": "^2.1.7",
     "primevue": "^3.50.0",
+    "uuid": "^9.0.1",
     "vue": "^3.4.21",
     "vue-router": "^4.3.0"
   },
   "devDependencies": {
+    "@types/uuid": "^9.0.8",
     "autoprefixer": "^10.4.19",
     "nuxt-primevue": "^0.3.1",
     "postcss": "^8.4.38",
