--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@pinia/nuxt": "^0.5.1",
     "nuxt": "^3.11.1",
     "pinia": "^2.1.7",
+    "primeicons": "^7.0.0",
     "primevue": "^3.50.0",
     "uuid": "^9.0.1",
     "vue": "^3.4.21",
