--- a/package.json
+++ b/package.json
@@ -11,13 +11,15 @@
   },
   "dependencies": {
     "@pinia/nuxt": "^0.5.1",
+    "axios": "^1.6.8",
     "nuxt": "^3.11.1",
     "pinia": "^2.1.7",
     "primeicons": "^7.0.0",
     "primevue": "^3.50.0",
     "uuid": "^9.0.1",
     "vue": "^3.4.21",
-    "vue-router": "^4.3.0"
+    "vue-router": "^4.3.0",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@types/uuid": "^9.0.8",
